--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ruizhe (Rachel) Liu"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD candidate, UNM"
   location         : "Albuquerque, NM"
   employer         :
