--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ruizhe Liu / 刘睿喆"
 title_separator          : "-"
 name                     : &name "Ruizhe (Rachel) Liu"
-description              : &description "personal description"
+description              : &description "Anthropologist & Archaeologist"
 url                      : https://rzliu37.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rzliu37/rzliu37.github.io"
